<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">MyFord Touch Guide</string>
    <string name="app_name_fr">Guide MyFord Touch (français)</string>

    <!-- English settings -->
    <string name="str_menu_settings">Settings</string>
    <string name="str_menu_quit">Quit</string>
    <string name="str_menu_rate">Rate</string>
    <string name="str_preference_general">General</string>
    <string name="str_preference_summary_fullscreen">Displays the application in full screen mode</string>
    <string name="str_preference_title_fullscreen">Fullscreen</string>
    <string name="str_preference_summary_maps">Check this option to simulate MyFord Touch with navigation</string>
    <string name="str_preference_title_maps">SD Card Navigation</string>
    <string name="str_preference_summary_vehicles">Select the vehicle to simulate specific climate control style</string>
    <string name="str_preference_title_vehicles">Climate Control Style</string>
    <string name="str_preference_summary_rate">Enable/Disable App Rating on Google Play</string>
    <string name="str_preference_title_rate">Enable App Rating</string>

    <!-- Downloader -->
    <string name="toast_download_complete">Download Complete.\nVideos are available to view.</string>

    <!-- EULA -->
    <string name="btn_agree_text">I Agree</string>
    <string name="eula_text">
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        </string>

</resources>