<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="avatar_settings" >

    <PreferenceCategory android:title="@string/str_preference_general" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="FULLSCREEN"
            android:summary="@string/str_preference_summary_fullscreen"
            android:title="@string/str_preference_title_fullscreen" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="MAPS"
            android:summary="@string/str_preference_summary_maps"
            android:title="@string/str_preference_title_maps" />

        <ListPreference
            android:id="@+id/vehListPreferences"
            android:defaultValue="edge"
            android:entries="@array/vehiclesModelsArray"
            android:entryValues="@array/vehiclesModelsValues"
            android:key="VEHICLES"
            android:summary="@string/str_preference_summary_vehicles"
            android:title="@string/str_preference_title_vehicles" />

    </PreferenceCategory>

</PreferenceScreen>